# rust_character_dictionary

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENCE  LICENSE  README.md  fly.toml
.archive/: main.rs
.archive/v28av24/: dbase.rs  forms.rs  handlers.rs  main.rs
src/: dbase.rs  forms.rs  handlers.rs  main.rs
vol/: zidian.db
vol/assets/: style.css  style.css.map  style.scss
vol/templates/: base.html  index.html  index_local.html
vol/templates/components/: content.html  deleteform.html  parsed.html  updateform.html  ziform.html  zilist.html
