[package]
name = "ruzdman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-remote-ip = "0.1.0"
actix-web = "4.5.1"

chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.3"
lazy_static = "1.4.0"
log = "0.4.21"
serde = { version = "1.0.198", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-async-std"] }
tera = { version = "1", default-features = false }
